# docs/swagger.yaml
@@ -4,9 +4,13 @@ definitions:
     properties:
       age:
         type: integer
+      created_at:
+        type: string
       email:
         type: string
       id:
+        type: integer
+      updated_at:
         type: string
       username:
         type: string
@@ -31,6 +35,17 @@ paths:
       consumes:
       - application/json
       description: 获取所有用户列表
+      parameters:
+      - default: 1
+        description: 页码，默认1
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: 每页数量，默认10
+        in: query
+        name: size
+        type: integer
       produces:
       - application/json
       responses:
